feat: Added ShipyardBuildTimeHoursPerUnit and DTO response
