# api/swagger.yaml
@@ -373,6 +373,9 @@ components:
         name:
           example: metal
           type: string
+        shipyard_build_time_hours_per_unit:
+          minimum: 1
+          type: number
         start_amount:
           minimum: 1
           type: integer
@@ -387,6 +390,7 @@ components:
       - created_at
       - id
       - name
+      - shipyard_build_time_hours_per_unit
       - start_amount
       - start_production
       - start_storage
